src/style.css
@font-face {
  font-family: Inter;
  src: url('./inter-small.ttf');
}
:root {
  font-family: Inter, system-ui, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  --white: #f7f5f6;
  --black: #232222;
}
html, body {
  margin: 0;
  overscroll-behavior: none;
  background-color: var(--white);
}
canvas {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
}
#overlay {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  display: flex;
}
.info {
  display: flex;
  flex-direction:row;
  position: absolute;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 40px;
  border-bottom: 1px solid var(--black);
  background-color: var(--white);
  color: var(--black);
  font-size: 15px;
}
.info #constructor {
  margin-left: 30px;
}
.info #theme {
  font-weight: bold;
  font-size: 20px;
}
.info #date {
  margin-right: 30px;
}
@media screen and (max-width: 700px) {
  .info {
    justify-content: center;
  }
  .info #constructor, .info #date {
    display: none;
  }

}
#undo {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: absolute;
  left: 30px;
  bottom: 60px;
  width: 80px;
  height: 40px;
  border: 1px solid var(--black);
  background-color: var(--white);
  border-radius: 50px;
  color: var(--black);
  font-size: 15px;
}
#zoom {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: absolute;
  right: 30px;
  bottom: 60px;
}
#zoom button {
  width: 50px;
  height: 60px;
  border: 1px solid var(--black);
  background-color: var(--white);
  border-radius: 50px 50px 0 0;
  color: var(--black);
  font-size: 15px;
}
#zoom button:last-child {
  border-top: none;
  border-radius: 0 0 50px 50px;
}
#zoom button:hover, #undo:hover {
  background-color: #b9b7b8;
}
#zoom button.disabled,#undo.disabled {
  opacity: 0.5;
}

